[package]
name = "hedystiadb"
version = "1.3.0"
authors = ["contact@hedystia.com"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
rand = "0.8.5"
hex = "0.4.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
